OP-781 LAB_EXAM_DATE -> LAB_DATE

--- a/rpt/OH007_lab_result_report.jrxml
+++ b/rpt/OH007_lab_result_report.jrxml
@@ -21,7 +21,7 @@
 FROM OH_LABORATORY
 JOIN OH_EXAM ON LAB_EXA_ID_A = EXA_ID_A
 JOIN OH_PATIENT ON LAB_PAT_ID = PAT_ID
-WHERE LAB_CREATED_DATE BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
+WHERE LAB_DATE BETWEEN DATE($P{fromdate}) AND DATE($P{todate})
 GROUP BY EXA_DESC, LAB_RES, LAB_SEX, LAB_AGE, PAT_CITY, PAT_ADDR
 ORDER BY EXA_DESC, LAB_RES, LAB_SEX, LAB_AGE, PAT_CITY, PAT_ADDR]]>
 	</queryString>
