--- a/rpt/OH007_lab_monthly_report.jrxml
+++ b/rpt/OH007_lab_monthly_report.jrxml
@@ -22,7 +22,7 @@
    select EXA_DESC AS EXAM, LAB_MATERIAL AS MATERIAL, 'Tests done' AS CATEGORY, count(*) AS COUNT 
    from OH_LABORATORY, OH_EXAM
    where LAB_EXA_ID_A = EXA_ID_A
-   and month(LAB_EXAM_DATE) = $P{month} and year(LAB_EXAM_DATE) = $P{year}
+   and month(LAB_DATE) = $P{month} and year(LAB_DATE) = $P{year}
    group by EXA_DESC, LAB_MATERIAL, 'Tests done'
    
 union all
@@ -30,7 +30,7 @@ union all
    select EXA_DESC AS EXAM, LAB_MATERIAL AS MATERIAL, case when (LAB_RES = EXA_DEFAULT) then 'Negative' else 'Positive' end AS CATEGORY, count(*) AS COUNT  
    from OH_LABORATORY, OH_EXAM
    where LAB_EXA_ID_A = EXA_ID_A
-   and month(LAB_EXAM_DATE) = $P{month} and year(LAB_EXAM_DATE) = $P{year}
+   and month(LAB_DATE) = $P{month} and year(LAB_DATE) = $P{year}
    group by EXA_DESC, LAB_MATERIAL, case when (LAB_RES = EXA_DEFAULT) then 'Negative' else 'Positive' end
 
 union all
@@ -38,7 +38,7 @@ union all
    select EXA_DESC AS EXAM, 'All materials' AS MATERIAL, 'Total tests done' AS CATEGORY, count(*) AS COUNT 
    from OH_LABORATORY, OH_EXAM
    where LAB_EXA_ID_A = EXA_ID_A
-   and month(LAB_EXAM_DATE)=$P{month} and year(LAB_EXAM_DATE)=$P{year}
+   and month(LAB_DATE)=$P{month} and year(LAB_DATE)=$P{year}
    group by EXA_DESC, 'All materials', 'Total tests done'
    
 ) labdata
