--- a/rpt/OH005_opd_count_monthly_report.jrxml
+++ b/rpt/OH005_opd_count_monthly_report.jrxml
@@ -15,7 +15,7 @@
     opd_sex 'SEX',
     count(*) as COUNT
 from OH_OPD
-where month(OPD_DATE_VIS) = $P{month} and year(OPD_DATE_VIS)=$P{year}
+where month(OPD_DATE) = $P{month} and year(OPD_DATE)=$P{year}
 group by case when OPD_NEW_PAT='N' then 'new attendance' else 'reattendance' end,
     (case when OPD_AGE <5 then '0-4 Years' else '5 and over' end),
     opd_sex
@@ -26,7 +26,7 @@ select
     opd_sex 'SEX',
     count(*) as COUNT
 from OH_OPD
-where month(OPD_DATE_VIS) = $P{month} and year(OPD_DATE_VIS)=$P{year}
+where month(OPD_DATE) = $P{month} and year(OPD_DATE)=$P{year}
 group by 'total',
     (case when OPD_AGE <5 then '0-4 Years' else '5 and over' end),
     opd_sex
