--- a/rpt/hmis033_weekly_epid_surv_over_5.jrxml
+++ b/rpt/hmis033_weekly_epid_surv_over_5.jrxml
@@ -43,7 +43,7 @@
    (select count(*) from OH_OPD o
     where o.OPD_DIS_ID_A = d.dis_id_a
     and o.OPD_AGE >= 5
-    and DATE(o.OPD_DATE_VIS) between DATE($P{fromdate}) and DATE($P{todate})
+    and DATE(o.OPD_DATE) between DATE($P{fromdate}) and DATE($P{todate})
     and o.OPD_NEW_PAT = 'N') opd_newattendance
 FROM OH_DISEASE d
 where d.DIS_DCL_ID_A in ('ND','OC')
