--- a/rpt/hmis105_opd_attendance.jrxml
+++ b/rpt/hmis105_opd_attendance.jrxml
@@ -22,8 +22,8 @@ SELECT  case when OPD_NEW_PAT = 'N' then 'New Attendance' else 'Re-attendance' e
         case when OPD_AGE>=5 and OPD_SEX = 'M' then 1 else null end maleover4,
         case when OPD_AGE>=5 and OPD_SEX = 'F' then 1 else null end femaleover4
     FROM OH_OPD o
-where year(OPD_DATE_VIS)=$P{year}
-  and month(OPD_DATE_VIS)=$P{month}) detaildata
+where year(OPD_DATE)=$P{year}
+  and month(OPD_DATE)=$P{month}) detaildata
 group by category
 order by category]]>
 	</queryString>
