OP-727 fix one report (discovered while doing OP-761)

--- a/rpt/MOH705A_Under_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.jrxml
+++ b/rpt/MOH705A_Under_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.jrxml
@@ -892,7 +892,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Eye Infections","Eye Infections") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (33)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -937,7 +937,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Ear Infections","Ear Infections") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (32)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -982,7 +982,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Other Dis. of Respiratory System","Other Dis. of Re
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (105, 206)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1027,7 +1027,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Pneumonia","Pneumonia") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (42)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1072,7 +1072,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Mental Disorders","Mental Disorders") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (17, 76, 71, 72, 73, 74)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1117,7 +1117,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dental Disorders","Dental Disorders") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (13)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1162,7 +1162,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dis. of the skin (incl. wounds)","Dis. of the skin 
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (43, 98)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1207,7 +1207,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Congenital Anomalies","Congenital Anomalies") AS DI
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (91)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1252,7 +1252,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Poisoning","Poisoning") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (83)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1297,7 +1297,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Accident - Fractures, injuries, etc","Accident - Fr
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (22,23,24,25,117)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1342,7 +1342,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Sexual Assault","Sexual Assault") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (81)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1387,7 +1387,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Burns","Burns") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (140)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1432,7 +1432,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Bites - Animal, snakes, etc.","Bites - Animal, snak
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (82)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1477,7 +1477,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Diabetes","Diabetes") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (14)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1522,7 +1522,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Epilepsy","Epilepsy") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (18)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1567,7 +1567,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dracuncolosis","Dracuncolosis") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (0)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1612,7 +1612,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Yellow Fever","Yellow Fever") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (11)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1657,7 +1657,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Viral Haemorrhagic Fever","Viral Haemorrhagic Fever
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (10)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1702,7 +1702,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"New AIDS Cases","New AIDS Cases") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (29)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1747,7 +1747,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Plague","Plague") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (8)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1792,7 +1792,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Brucellosis","Brucellosis") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (226)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1809,7 +1809,7 @@ SELECT "1)" AS DIS_DESC,
        "" AS DAY20, "" AS DAY21, "" AS DAY22, "" AS DAY23, "" AS DAY24, "" AS DAY25, "" AS DAY26, "" AS DAY27, "" AS DAY28, "" AS DAY29,
        "" AS DAY30, "" AS DAY31, "" AS TOTAL
 
-FROM DISEASE
+FROM OH_DISEASE
 
 UNION
 
@@ -1821,7 +1821,7 @@ SELECT "2)" AS DIS_DESC,
        "" AS DAY20, "" AS DAY21, "" AS DAY22, "" AS DAY23, "" AS DAY24, "" AS DAY25, "" AS DAY26, "" AS DAY27, "" AS DAY28, "" AS DAY29,
        "" AS DAY30, "" AS DAY31, "" AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 
 UNION
 
@@ -1861,7 +1861,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"ALL OTHER DISEASES","ALL OTHER DISEASES") AS DIS_DE
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD JOIN DISEASE ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_OPD JOIN OH_DISEASE ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A not in (30,31,44,3,2,6,7,1,131,5,60,205,39,47,46,247,37,80,77,79,78,20,12,33,32,105,206,42,17,76,71,72,73,74,13,43,98,91,83,22,23,24,25,117,81,140,82,14,18,11,10,29,8,226)
   AND OPD_DIS_ID_A not in (200)
   AND MONTH(OPD_DATE) = $P{month}
@@ -1907,7 +1907,7 @@ SELECT IF(COUNT(*)=0,"TOTAL NEW CASES","TOTAL NEW CASES") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
   AND OPD_AGE < 5
@@ -1952,7 +1952,7 @@ SELECT IF(COUNT(*)=0,"NO. OF FIRST ATTENDANCES","NO. OF FIRST ATTENDANCES") AS D
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_NEW_PAT = 'N'
   AND OPD_DIS_ID_A not in (200)
   AND MONTH(OPD_DATE) = $P{month}
@@ -1998,7 +1998,7 @@ SELECT IF(COUNT(*)=0,"RE-ATTENDANCES","RE-ATTENDANCES") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_NEW_PAT = 'R'
   AND OPD_DIS_ID_A not in (200)
   AND MONTH(OPD_DATE) = $P{month}
@@ -2044,7 +2044,7 @@ SELECT IF(COUNT(*)=0,"REFERRALS IN","REFERRALS IN") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_REFERRAL_FROM = 'R'
   AND OPD_DIS_ID_A not in (200)
   AND MONTH(OPD_DATE) = $P{month}
@@ -2091,7 +2091,7 @@ SELECT IF(COUNT(*)=0,"REFERRALS OUT","REFERRALS OUT") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_REFERRAL_TO = 'R'
   AND OPD_DIS_ID_A not in (200)
   AND MONTH(OPD_DATE) = $P{month}
