--- a/rpt/MOH705B_Over_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.jrxml
+++ b/rpt/MOH705B_Over_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.jrxml
@@ -917,7 +917,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Ear Infections","Ear Infections") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (32)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -961,7 +961,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Other Dis. of Respiratory System","Other Dis. of Re
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM OH_DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (105, 206)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1005,7 +1005,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Pneumonia","Pneumonia") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (42)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1049,7 +1049,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Abortion","Abortion") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (28, 204)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1092,7 +1092,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dis. of Puerperium & Childbirth","Dis. of Puerperiu
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (298)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1135,7 +1135,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Hypertension","Hypertension") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (16)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1178,7 +1178,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Mental Disorders","Mental Disorders") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (17, 76, 71, 72, 73, 74)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1222,7 +1222,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dental Disorders","Dental Disorders") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (13)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1266,7 +1266,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dis. of the skin (incl. wounds)","Dis. of the skin 
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (43, 98)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1310,7 +1310,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Rheumatism, Joint pains, etc.","Rheumatism, Joint p
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (132)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1354,7 +1354,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Poisoning","Poisoning") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (83)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1398,7 +1398,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Accident - Fractures, injuries, etc","Accident - Fr
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (22,23,24,25,117)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1442,7 +1442,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Sexual Assault","Sexual Assault") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (81)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1486,7 +1486,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Burns","Burns") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (140)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1530,7 +1530,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Bites - Animal, snakes, etc.","Bites - Animal, snak
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (82)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1574,7 +1574,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Diabetes","Diabetes") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (14)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1618,7 +1618,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Epilepsy","Epilepsy") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (18)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1662,7 +1662,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Dracuncolosis","Dracuncolosis") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (0)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1706,7 +1706,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Yellow Fever","Yellow Fever") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (11)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1750,7 +1750,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Viral Haemorrhagic Fever","Viral Haemorrhagic Fever
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (10)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1794,7 +1794,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"New AIDS Cases","New AIDS Cases") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (29)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1838,7 +1838,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Plague","Plague") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (8)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1882,7 +1882,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"Brucellosis","Brucellosis") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=30,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=30,1,NULL))) AS DAY30,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A in (226)
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -1898,7 +1898,7 @@ SELECT "1)" AS DIS_DESC,
        "" AS DAY20, "" AS DAY21, "" AS DAY22, "" AS DAY23, "" AS DAY24, "" AS DAY25, "" AS DAY26, "" AS DAY27, "" AS DAY28, "" AS DAY29,
        "" AS DAY30, "" AS DAY31, "" AS TOTAL
 
-FROM DISEASE
+FROM OH_DISEASE
 
 UNION
 
@@ -1910,7 +1910,7 @@ SELECT "2)" AS DIS_DESC,
        "" AS DAY20, "" AS DAY21, "" AS DAY22, "" AS DAY23, "" AS DAY24, "" AS DAY25, "" AS DAY26, "" AS DAY27, "" AS DAY28, "" AS DAY29,
        "" AS DAY30, "" AS DAY31, "" AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 
 UNION
 
@@ -1950,7 +1950,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"ALL OTHER DISEASES","ALL OTHER DISEASES") AS DIS_DE
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD JOIN DISEASE ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_OPD JOIN OH_DISEASE ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE DIS_ID_A not in (30,31,44,3,2,6,111,1,131,5,60,205,39,116,46,59,47,37,80,77,79,78,20,12,33,32,105,206,42,28,204,298,16,17,76,71,72,73,74,13,43,98,132,83,22,23,24,25,117,81,140,82,14,18,11,10,29,8,226)
   AND DIS_ID_A not in (200)
   AND MONTH(OPD_DATE) = $P{month}
@@ -1995,7 +1995,7 @@ SELECT IF(COUNT(DIS_DESC)=0,"TOTAL NEW CASES","TOTAL NEW CASES") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM DISEASE JOIN OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
+FROM OH_DISEASE JOIN OH_OPD ON DIS_ID_A IN (OPD_DIS_ID_A, OPD_DIS_ID_A_2, OPD_DIS_ID_A_3)
 WHERE MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
   AND OPD_AGE >= 5
@@ -2039,7 +2039,7 @@ SELECT IF(COUNT(*)=0,"NO. OF FIRST ATTENDANCES","NO. OF FIRST ATTENDANCES") AS D
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_NEW_PAT = 'N'
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -2084,7 +2084,7 @@ SELECT IF(COUNT(*)=0,"RE-ATTENDANCES","RE-ATTENDANCES") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_NEW_PAT = 'R'
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -2129,7 +2129,7 @@ SELECT IF(COUNT(*)=0,"REFERRALS IN","REFERRALS IN") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_REFERRAL_FROM = 'R'
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
@@ -2174,7 +2174,7 @@ SELECT IF(COUNT(*)=0,"REFERRALS OUT","REFERRALS OUT") AS DIS_DESC,
        IF(COUNT(IF(DAY(OPD_DATE)=31,1,NULL)) = 0, "", COUNT(IF(DAY(OPD_DATE)=31,1,NULL))) AS DAY31,
        IF(COUNT(OPD_DATE) = 0, "",  COUNT(OPD_DATE)) AS TOTAL
 
-FROM OPD
+FROM OH_OPD
 WHERE OPD_REFERRAL_TO = 'R'
   AND MONTH(OPD_DATE) = $P{month}
   AND YEAR(OPD_DATE) = $P{year}
