--- a/rpt/BillsReportMonthlyWard.jrxml
+++ b/rpt/BillsReportMonthlyWard.jrxml
@@ -18,6 +18,9 @@
 	<parameter name="Telephone" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="fromdate" class="java.util.Date"/>
 	<parameter name="todate" class="java.util.Date"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String">
+		<defaultValueExpression><![CDATA["./rpt/"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT DATE_FORMAT(DATE,'%Y-%m') AS DATE, 
 		SUM(BILLED) AS BILLED, 
@@ -110,9 +113,9 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 	<group name="WARD" isStartNewPage="true">
 		<groupExpression><![CDATA[$F{WARD}]]></groupExpression>
 		<groupHeader>
-			<band height="79">
+			<band height="73">
 				<textField pattern="MMMMM-yy" isBlankWhenNull="false">
-					<reportElement key="textField-24" x="0" y="0" width="390" height="20" uuid="c06fdc4b-e81c-4fe3-88bb-0ee3c2d857bd"/>
+					<reportElement key="textField-24" x="0" y="0" width="782" height="20" uuid="c06fdc4b-e81c-4fe3-88bb-0ee3c2d857bd"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -122,10 +125,10 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans" size="14" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{WARD}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{WARD}.equals( "OPD" ) ? $R{OPD.wards} : $F{WARD}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement key="staticText-9" x="73" y="47" width="144" height="32" uuid="064088fb-6313-496b-968e-ac0c6fa98586"/>
+					<reportElement key="staticText-9" x="73" y="41" width="144" height="32" uuid="064088fb-6313-496b-968e-ac0c6fa98586"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
@@ -138,7 +141,7 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 					<textFieldExpression><![CDATA[$R{Billed.Income}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement key="staticText-11" x="565" y="47" width="144" height="32" uuid="a4ad8f8e-a368-48ad-9543-ca4f9951fc06"/>
+					<reportElement key="staticText-11" x="565" y="41" width="144" height="32" uuid="a4ad8f8e-a368-48ad-9543-ca4f9951fc06"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
@@ -151,7 +154,7 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 					<textFieldExpression><![CDATA[$R{Receivable}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement key="staticText-14" x="319" y="47" width="144" height="32" uuid="73e00f10-b463-4f65-b7bd-a71d12175649"/>
+					<reportElement key="staticText-14" x="319" y="41" width="144" height="32" uuid="73e00f10-b463-4f65-b7bd-a71d12175649"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
@@ -164,7 +167,7 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 					<textFieldExpression><![CDATA[$R{Cash.Collections}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement key="staticText-8" x="0" y="47" width="74" height="32" uuid="ccfae075-8cdb-4b67-86ab-9832ad6cf69e"/>
+					<reportElement key="staticText-8" x="0" y="41" width="74" height="32" uuid="ccfae075-8cdb-4b67-86ab-9832ad6cf69e"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -465,84 +468,6 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 	<summary>
 		<band height="102" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<textField>
-				<reportElement key="staticText-9" x="73" y="50" width="144" height="32" uuid="5c093721-18d1-43fa-8563-1512d2ccd9fc"/>
-				<box rightPadding="5">
-					<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.25" lineColor="#000000"/>
-					<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$R{Billed.Income}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement key="staticText-14" x="319" y="50" width="144" height="32" uuid="7b150601-a230-4fcf-9d2f-f0142ab0223f"/>
-				<box rightPadding="5">
-					<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.25" lineColor="#000000"/>
-					<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$R{Cash.Collections}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement key="staticText-11" x="565" y="50" width="144" height="32" uuid="df3439ea-973a-4943-b4e3-b46c5bd95621"/>
-				<box rightPadding="5">
-					<topPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.25" lineColor="#000000"/>
-					<rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$R{Receivable}]]></textFieldExpression>
-			</textField>
-			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement key="textField-50" x="73" y="82" width="144" height="20" uuid="d8aa8cde-8ad0-4c99-918c-a715b132febc"/>
-				<box rightPadding="5">
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
-				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$V{TOTAL_BILLED}]]></textFieldExpression>
-			</textField>
-			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement key="textField-51" x="319" y="82" width="144" height="20" uuid="4e9e51fb-473a-4acf-9bee-a08fb37d4ee0"/>
-				<box rightPadding="5">
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
-				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$V{TOTAL_INCOME}]]></textFieldExpression>
-			</textField>
-			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement key="textField-52" x="565" y="82" width="144" height="20" uuid="6b5c59cc-471d-496b-bb88-069dc2f171a2"/>
-				<box rightPadding="5">
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
-				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$V{TOTAL_RECEIVABLE}]]></textFieldExpression>
-			</textField>
 			<textField pattern="MMMMM-yy" isBlankWhenNull="false">
 				<reportElement key="textField-24" x="0" y="0" width="390" height="20" uuid="bf2f855e-6746-48b5-8d8e-955bab9497e3"/>
 				<box>
@@ -556,6 +481,17 @@ ORDER BY WARD, YEAR(DATE), MONTH(DATE)]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$R{Summary}]]></textFieldExpression>
 			</textField>
+			<subreport>
+				<reportElement x="0" y="41" width="781" height="61" uuid="3b994ccb-1bc5-4c8d-ab7a-51fee1288797"/>
+				<subreportParameter name="fromdate">
+					<subreportParameterExpression><![CDATA[$P{fromdate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="todate">
+					<subreportParameterExpression><![CDATA[$P{todate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "BillsReportMonthlyWard_subreport.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</summary>
 </jasperReport>
